--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:client": "npm start --prefix app",
     "start:server": "node server/index.js",
     "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
-    "test:server": "mocha 'server/**/test/**/*.js' --recursive --exit"
+    "test:server": "mocha 'server/**/test/**/*.js' --recursive --exit",
+    "test:client": "npm run test:no-watch --prefix app",
+    "test": "npm run test:client && npm run test:server"
   },
   "keywords": [],
   "author": "",
